crates/sui/tests/snapshots/ptb_files_tests__include_non_existent_file.ptb.snap
---
source: crates/sui/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error at command 0 in PTB file 'tests/ptb_files/file/
  │ include_non_existent_file.ptb'
   ╭────
 1 │ --file nope
   ·        ──┬─
   ·          ╰── Unable to read file '"tests/ptb_files/file/nope"'
   ╰────

