crates/sui/tests/snapshots/ptb_files_tests__keyword_resolution.ptb.snap
---
source: crates/sui/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭────────────────────────────────────────────────────────────────────────────╮
│ PTB Preview                                                                │
├────────────┬───────────────────────────────────────────────────┬───────────┤
│ command    │ from                                              │ value(s)  │
├────────────┼───────────────────────────────────────────────────┼───────────┤
│ assign     │ tests/ptb_files/resolution/keyword_resolution.ptb │ gas @0x1  │
│ assign     │ tests/ptb_files/resolution/keyword_resolution.ptb │ none @0x1 │
│ gas_budget │ tests/ptb_files/resolution/keyword_resolution.ptb │ 11        │
│ preview    │ console                                           │ true      │
╰────────────┴───────────────────────────────────────────────────┴───────────╯
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error at command 0 in PTB file 'tests/ptb_files/resolution/
  │ keyword_resolution.ptb'
   ╭────
 1 │ assign gas @0x1 
   ·        ─┬─
   ·         ╰── Expected variable binding
   ╰────

  × Error at command 1 in PTB file 'tests/ptb_files/resolution/
  │ keyword_resolution.ptb'
   ╭────
 1 │ assign none @0x1 
   ·        ──┬─
   ·          ╰── Expected variable binding
   ╰────

